Fix CORS + JWT filter for auth endpoints